# amplifier-app-cli

./: .editorconfig  .env.example  .gitignore  AGENTS.md  BD-19-IMPLEMENTATION-SUMMARY.md  BD-22-23-IMPLEMENTATION-ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  COSMETIC_CLEANUP_LIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  README.md  REMAINING_REFERENCES_EXPLAINED.md  SESSION_HISTORY_TESTING.md  amplifier.log.jsonl  justfile  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agents/: bug-hunter.md  modular-builder.md  researcher.md  zen-architect.md
ai_working/: MARKDOWN_TESTING_GUIDE.md  STREAMING_UI_INTERACTION.md  TEST_TOMORROW.md  debug_markdown.py
amplifier-app-cli/: pyproject.toml
amplifier_app_cli/: agent_config.py  approval_provider.py  clipboard_handler.py  console.py  cost_history.py  effective_config.py  incremental_save.py  key_manager.py  logging_setup.py  main.py  module_manager.py  paths.py  provider_config_utils.py  provider_guard.py  provider_loader.py  provider_manager.py  provider_sources.py  session_runner.py  session_spawner.py  session_store.py  settings.py  stdin_arbiter.py  stdout_offload.py  steering_input.py  types.py
amplifier_cli/: approval_provider.py  logging_setup.py  main.py
amplifier_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: AGENT_DELEGATION_IMPLEMENTATION.md  CONTEXT_LOADING.md  INTERACTIVE_MODE.md  MIGRATION-main-decomposition.md  MODEL_CLASS_ROUTING.md  OUTPUT_FORMATS.md  PHASE2_ARCHITECTURE.md  PHASE2_IMPLEMENTATION_SPECS.md  SCENARIO_TOOLS_GUIDE.md  SPAWN_PRECEDENCE.md  TOOLKIT_GUIDE.md
profiles/: README.md  base.md  base.toml  dev.md  dev.toml  experimental.toml  foundation.md  foundation.toml  full.md  full.toml  minimal.toml  production.md  production.toml  test.md  test.toml
scripts/: smoke-test.sh
tests/: conftest.py  helpers.py  regen_goldens.py  test_active_mode_capabilities_migration.py  test_agent_lanes.py  test_agent_resolver_collections.py  test_agent_scoped_config_overrides.py  test_always_render_final_response.py  test_amplifier_compat.py  test_anchors_amp_dev_registration.py  test_approval_bridge.py  test_approval_provider.py  test_attribution_cosmetics.py  test_auto_init.py  test_bottom_stdout.py  test_bundle_context.py  test_bundle_remove.py  test_chat_completions_registration.py  test_cleanup_observability.py  test_clipboard.py  test_clipboard_availability.py  test_command_palette.py  test_command_processor_boundary.py  test_command_registry.py  test_command_status.py  test_commands_skill_shortcuts.py  test_config_commands.py  test_core_commands.py  (+130 more)
toolkit/examples/tutorial_analyzer/: README.md  pyproject.toml
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/: utils.py
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/analyzer/: core.py
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/critic/: core.py
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/diagnostician/: core.py
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/improver/: core.py
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/learner_simulator/: core.py
toolkit/examples/tutorial_analyzer/src/tutorial_analyzer/synthesizer/: core.py
(+440 files in other folders)
