[project]
name = "amplifier-app-cli"
version = "0.1.1"
description = "Reference CLI implementation for Amplifier AI development platform"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Microsoft MADE:Explorations Team" }]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pygments>=2.13.0",
    "pydantic>=2.0.0",
    "amplifier-core>=1.6.0",
    "amplifier-foundation",
    "pyyaml>=6.0.3",
    "prompt-toolkit>=3.0.52",
    "httpx[socks]>=0.28.1",
    "packaging>=24.0",
    "filelock>=3.29.6",
]

[project.scripts]
amplifier = "amplifier_app_cli.main:main"

[tool.uv]
package = true

[tool.hatch.build]
exclude = ["/AGENTS.md"]

[tool.hatch.build.targets.wheel]
packages = ["amplifier_app_cli"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.0",
]

[tool.uv.sources]
amplifier-foundation = { git = "https://github.com/microsoft/amplifier-foundation", rev = "dc010423d010da9a52e1b49808a1865666008c25" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib -m \"not integration\""
asyncio_mode = "strict"
markers = [
    "integration: marks tests that fork a real pty child process and probe real termios state (deselected by default; run with '-m integration')",
]

[tool.pyright]
include = ["amplifier_app_cli"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
