[project]
name = "tutorial-analyzer"
version = "0.1.0"
description = "Analyze tutorials and generate improvement recommendations through multi-stage metacognitive analysis"
authors = [{name = "Amplifier Team"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

keywords = ["ai", "tutorial", "education", "amplifier", "metacognitive-recipe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
    "amplifier-module-provider-anthropic @ git+https://github.com/microsoft/amplifier-module-provider-anthropic@main",
    "amplifier-module-loop-streaming @ git+https://github.com/microsoft/amplifier-module-loop-streaming@main",
    "amplifier-module-loop-basic @ git+https://github.com/microsoft/amplifier-module-loop-basic@main",
    "amplifier-module-context-simple @ git+https://github.com/microsoft/amplifier-module-context-simple@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tutorial-analyzer = "tutorial_analyzer.main:cli"

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[tool.hatch.build.targets.wheel]
packages = ["src/tutorial_analyzer"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
